--- a/src/TaskbarWindow.xaml
+++ b/src/TaskbarWindow.xaml
@@ -17,8 +17,9 @@
         Topmost="True"
         Background="Transparent"
         Height="48">
-    <Grid x:Name="gridTaskBar">
-        <Grid Background="#FF000000" PreviewTouchDown="Grid_PreviewTouchDown" />
+    <Grid x:Name="gridTaskBar" Background="Transparent">
+        <Grid x:Name="gridAcrylicBackground" Background="Black" Opacity="1" PreviewTouchDown="Grid_PreviewTouchDown" />
+
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" FlowDirection="LeftToRight">
             <Button Stylus.IsPressAndHoldEnabled="False" PreviewTouchDown="Button_PreviewTouchDown" Style="{StaticResource FlatButton}" 
                     x:Name="backButton" Width="48" Padding="0" Height="48" Background="Transparent" MouseRightButtonUp="BackButton_MouseRightButtonUp">
@@ -27,7 +28,7 @@
             </Button>
             <Button x:Name="windowsButton" Click="WindowsLogo_Click" Style="{StaticResource FlatButton}" Width="48" Padding="0" 
                     Height="48" Background="Transparent" Margin="64,0" MouseRightButtonUp="WindowsButton_MouseRightButtonUp">
-                <Glyphs FontUri="pack://application:,,,/MobileShell;component/Fonts/HOLOMDL2.TTF" Height="20" Width="20" HorizontalAlignment="Left" 
+                <Glyphs x:Name="windowsLogo" FontUri="pack://application:,,,/MobileShell;component/Fonts/HOLOMDL2.TTF" Height="20" Width="20" HorizontalAlignment="Left" 
                     FontRenderingEmSize="20" Fill="#bfbfbf" Margin="8" UnicodeString="&#xE782;" />
             </Button>
             <Button x:Name="searchButton" Click="SearchButton_Click" Style="{StaticResource FlatButton}" Width="48" Padding="0" 
