Once more, unto the breach....

--- a/src/NavbarWindow.xaml
+++ b/src/NavbarWindow.xaml
@@ -35,7 +35,7 @@
             <ColumnDefinition Width="112"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-
+        <!-- Marker for git too... -->
         <Grid Grid.ColumnSpan="5" Background="{DynamicResource ImmersiveSystemAccentBrush}" PreviewTouchDown="Grid_PreviewTouchDown" Opacity="0.25" />
         
         <Button Grid.Column="1" Stylus.IsPressAndHoldEnabled="False" PreviewTouchDown="Button_PreviewTouchDown" Style="{StaticResource FlatButton}" x:Name="backButton" MouseRightButtonUp="BackButton_MouseRightButtonUp">
